--- a/src/routes/public/assets/css/managetriggers.css
+++ b/src/routes/public/assets/css/managetriggers.css
@@ -426,7 +426,7 @@ nav ul li a:hover {
     height: 100px;
     margin: 10px 0;
     padding: 10px;
-    background-color: #c2c2c2;
+    background-color: #d2d2d2;
     border: 2px solid #000;
     border-radius: 5px;
     cursor: pointer;
