--- a/src/routes/public/assets/css/clip.css
+++ b/src/routes/public/assets/css/clip.css
@@ -85,6 +85,8 @@ body {
     transition: background-color 1.5s ease-in-out, transform 1s ease-in-out, opacity 1.5s ease-in-out;
     overflow: hidden;
     text-align: center;
+    border-radius: 0 30px 30px 0;
+    backdrop-filter: blur(10px);
 }
 
 .right-container h2 {
