Irith CSS Improvements

--- a/src/routes/public/assets/css/clip.css
+++ b/src/routes/public/assets/css/clip.css
@@ -69,6 +69,7 @@ body {
     justify-content: center;
     align-items: center;
     z-index: 100;
+    border-radius: 15px 0 0 15px;
 }
 
 .right-container {
