--- a/src/routes/public/assets/css/clip.css
+++ b/src/routes/public/assets/css/clip.css
@@ -1,14 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     min-width: 0px;
     min-height: 0px;
+    font-family: 'poppins', sans-serif;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    background: #f5f5f5;
+    background: #9b9b9b;
 }
 
 #container {
@@ -70,6 +72,7 @@ body {
     align-items: center;
     z-index: 100;
     border-radius: 15px 0 0 15px;
+    overflow: hidden;
 }
 
 .right-container {
@@ -88,26 +91,27 @@ body {
     text-align: center;
     border-radius: 0 15px 15px 0;
     backdrop-filter: blur(10px);
+    padding: 5px 5px 5px 55px;
 }
 
 .right-container h2 {
-    font-size: 2.5em;
-    color: #000000;
-    margin-bottom: 20px;
+    font-size: 1.8em;
+    color: #252525;
+    margin-bottom: 10px;
     font-weight: 300;
 }
 
 .right-container p {
-    font-size: 1.5em;
-    color: #000000;
-    margin-bottom: 20px;
+    font-size: 1em;
+    color: #252525;
+    margin-bottom: 10px;
     font-weight: 300;
 }
 
 .right-container h4 {
-    font-size: 1.2em;
-    color: #000000;
-    margin-bottom: 20px;
+    font-size: .8em;
+    color: #252525;
+    margin-bottom: 10px;
     font-weight: 300;
 }
 
