--- a/src/routes/public/assets/css/clip.css
+++ b/src/routes/public/assets/css/clip.css
@@ -96,21 +96,21 @@ body {
 
 .right-container h2 {
     font-size: 1.8em;
-    color: #252525;
+    color: #b9b9b9;
     margin-bottom: 10px;
     font-weight: 300;
 }
 
 .right-container p {
     font-size: 1em;
-    color: #252525;
+    color: #b9b9b9;
     margin-bottom: 10px;
     font-weight: 300;
 }
 
 .right-container h4 {
     font-size: .8em;
-    color: #252525;
+    color: #b9b9b9;
     margin-bottom: 10px;
     font-weight: 300;
 }
