--- a/src/routes/public/assets/css/clip.css
+++ b/src/routes/public/assets/css/clip.css
@@ -101,7 +101,7 @@ body {
     font-weight: 300;
 }
 
-.right-container p {
+.right-container h3 {
     font-size: 1em;
     color: #b9b9b9;
     margin-bottom: 10px;
