--- a/src/routes/public/assets/css/clip.css
+++ b/src/routes/public/assets/css/clip.css
@@ -90,7 +90,7 @@ body {
     overflow: hidden;
     text-align: center;
     border-radius: 0 15px 15px 0;
-    backdrop-filter: blur(10px);
+    /* backdrop-filter: blur(10px); */
     padding: 5px 5px 5px 55px;
 }
 
